# kube-downscaler

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  Pipfile  README.rst  pyproject.toml  requirements.txt  restore-cronjobs-starting-deadline-seconds.py  setup.py  tox.ini
deploy/: config.yaml  deployment.yaml  kustomization.yaml  rbac.yaml
helm-chart/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm-chart/templates/: _helpers.tpl  clusterrole.yaml  deployment.yaml
helm-chart/tutorial/flaskapp/: flask_1.yaml  flask_3.yaml
kube_downscaler/: __init__.py  __main__.py  cmd.py  helper.py  main.py  scaler.py  shutdown.py
kube_downscaler/resources/: deployment.py  scalable.py  stack.py  stackset.py  statefulset.py
tests/: test_autoscale_resource.py  test_cmd.py  test_events.py  test_grace_period.py  test_main.py  test_pods_force_uptime.py  test_resources.py  test_scaler.py  test_time.py
unsupported/helm-chart/: values.yaml
unsupported/helm-chart/config/: minikube.yaml  production.yaml  testing.yaml
unsupported/helm-chart/templates/: clusterrole.yaml  clusterrolebinding.yaml  serviceaccount.yaml
unsupported/helm-chart/tutorial/flaskapp/: flask_2.yaml
